--- a/docs/_includes/google-analytics.html
+++ b/docs/_includes/google-analytics.html
@@ -1,7 +1,6 @@
 {% if jekyll.environment == "production" %}
-    {% assign gid = site.env.NETLIFY_GOOGLE_ANALYTICS_ID %}
-    {% if gid %}
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ gid }}"></script>
+    {% if site.seo.google_analytics_id %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.seo.google_analytics_id }}"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
 
@@ -9,18 +8,7 @@
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-      gtag('config', '{{ $gid }}');
-    </script>
-    {% elsif site.data.seo.google_analytics_id %}
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.data.seo.google_analytics_id }}"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-      gtag('config', '{{ site.data.seo.google_analytics_id }}');
+      gtag('config', '{{ site.seo.google_analytics_id }}');
     </script>
     {% endif %}
 {% endif %}
