--- a/docs/_sass/components/_call.scss
+++ b/docs/_sass/components/_call.scss
@@ -42,6 +42,14 @@
       color: $black;
     }
   }
+  .call-linkedin {
+    a {
+      color: $black;
+    }
+    img {
+      height: 1.1rem;
+    }
+  }
   strong {
     font-weight: bold;
   }
