--- a/docs/_layouts/service.html
+++ b/docs/_layouts/service.html
@@ -8,8 +8,9 @@ bodyClass: "page-service"
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <h1 class="title">{{page.title}}</h1>
-        <div class="content">{{content}}</div>
+        <div class="content"><p>{{page.tease}}</p>{{content}}</div>
       </div>
+      {% include services-footer.html %}
     </div>
   </div>
 </div>
