--- a/docs/_layouts/services.html
+++ b/docs/_layouts/services.html
@@ -27,7 +27,7 @@ bodyClass: "page-services"
           <h2 class="service-title">
             <a href="{{ service.url | relative_url }}">{{ service.title }}</a>
           </h2>
-          <p>{{ service.content | markdownify | strip_html | truncate: 130 }}</p>
+          <p>{{ service.tease | markdownify | strip_html }}</p>
         </div>
       </div>
     </div>
