--- a/docs/_includes/services-footer.html
+++ b/docs/_includes/services-footer.html
@@ -1,4 +1,4 @@
 <div class="services-footer">
-<p>Get in contact to start with a free session. Spend half an hour explaining the objective and constraints and you'll get a report outlining some high level, solution agnostic approaches to consider.</p>
-<p>Alternately, if you've already got a high level plan, consider whether the sensitivity or volume of data warrants a closer look before you're too far committed down a potentially expensive or costly route.</p>
+<p>Contact us to start with a free session. Spend half an hour explaining the objective and constraints and receive a report outlining some high level, solution agnostic approaches to consider.</p>
+<p>Alternately, if you already have a high level plan, consider whether the sensitivity or volume of data warrants a closer look before you proceed too far down a potentially expensive or problematic route.</p>
 </div>
