--- a/docs/_includes/call.html
+++ b/docs/_includes/call.html
@@ -16,8 +16,11 @@
     {% endif %}
     {% if site.data.contact.linkedin %}
     <div class="call-linkedin">
-      <a href="{{ site.data.contact.linkedin }}">
-        <img alt="LinkedIn - {{site.data.contact.linkedin}}" src="/images/logo/linkedin.svg" /> {{site.data.contact.linkedin}}
+      <a class="call-linkedin-logo" href="{{ site.data.contact.linkedin }}">
+        <img alt="LinkedIn - {{site.data.contact.linkedin}}" src="/images/logo/linkedin.svg" />
+      </a>
+      <a class="call-linkedin-text d-none d-lg-block" href="{{ site.data.contact.linkedin }}">
+        {{site.data.contact.linkedin}}
       </a>
     </div>
     {% endif %}
