--- a/docs/_layouts/teams.html
+++ b/docs/_layouts/teams.html
@@ -36,7 +36,7 @@ bodyClass: "page-teams"
                     <a target="_blank" href="{{ team.linkedinurl }}" rel="noreferrer">LinkedIn</a>
                     {% endif %}
                 </div>
-                <div class="team-content">{{ team.content | truncate: 120 }}</div>
+                <div class="team-content">{{ team.content | truncate: 240 }} <a href="{{ team.url | relative_url }}">read more</a></div>
             </div>
         </div>
         {% endfor %}
